Fix community drop-down menu alignment.

--- a/css/tethys_main.css
+++ b/css/tethys_main.css
@@ -81,7 +81,7 @@
 }
 
 .header-dropdown-menu.community {
-    right: 93px;
+    right: 150px;
 }
 
 .header-dropdown-menu.getting-started {
